--- a/fiszki/templates/homepage.html
+++ b/fiszki/templates/homepage.html
@@ -9,22 +9,30 @@
 </head>
 <body>
     <header>
+        <nav>
+            <p>NOT LOGGED IN</p>
+        </nav>
+</header>
+
+<div class="main-section">
     <div class="text-container">
         <h1>Flash Cards</h1>
-        <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam, rerum? Ullam in quibusdam a repellendus doloribus consequatur sequi illum suscipit?</h3>
     </div>
-    <div class="logo">
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
+    <div class="logobox">
+        <div class="logo">
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+        </div>
+    </div>    
+    <div class="login-section">
+        <a href=""><button class="login">Login</button></a>
+        <a href=""><button class="register">Register</button></a>
     </div>
-</header>
-<div class="login-section">
-    <button class="login">Login</button>
-    <button class="register">Register</button>
-</div>
-<div class="main-section">
-    
 </div>
 </body>
 </html>
